--- a/ViteBusiness/Assets/zh-Hans.lproj/Localizable.strings
+++ b/ViteBusiness/Assets/zh-Hans.lproj/Localizable.strings
@@ -758,6 +758,7 @@
 "bifrost.home.page.free.address.title" = "地址";
 "bifrost.home.page.free.history.title" = "签名交易";
 "bifrost.home.page.free.auto.sign.title" = "自动签名交易";
+"bifrost.home.page.free.auto.sign.confrim.title" = "密码确认";
 
 "bifrost.home.page.busy.header" = "您正在web端进行操作";
 "bifrost.home.page.busy.content" = "请确认如下交易信息";
