--- a/ViteBusiness/Assets/en.lproj/Localizable.strings
+++ b/ViteBusiness/Assets/en.lproj/Localizable.strings
@@ -66,7 +66,7 @@
 
 /* Lock */
 "lock.page.pwd.btn.title" = "Login via password";
-"lock.page.fingerprint.btn.title" = "Arouse verify again";
+"lock.page.fingerprint.btn.title" = "Biometric Verification";
 "lock.page.fingerprint.alter.title" = "Verify fingerprint to activate Touch ID";
 "lock.page.changeUser.btn.title" = "Switch Account";
 
