--- a/ViteBusiness/Assets/en.lproj/Localizable.strings
+++ b/ViteBusiness/Assets/en.lproj/Localizable.strings
@@ -649,31 +649,31 @@
 // CrossChain Transfer & Receive
 
 "crosschain.tokendetail" = "Token Details";
-"crosschain.deposit" = "Cross-Chain Receive";
-"crosschain.withdraw" = "Cross-Chain Send";
-"crosschain.withdraw.btnTitle" = "Send";
-"crosschain.deposit.btnTitle" = "Receive";
-"crosschain.deposit.vitewallet" = "Receive from Vite Wallet";
-"crosschain.deposit.otherwallet" = "Receive from Another Wallet";
-"crosschain.deposit.history" = "Receive History";
-"crosschain.withdraw.history" = "Transfer History";
+"crosschain.deposit" = "Cross-Chain Deposit";
+"crosschain.withdraw" = "Cross-Chain Withdraw";
+"crosschain.withdraw.btnTitle" = "Withdraw";
+"crosschain.deposit.btnTitle" = "Deposit";
+"crosschain.deposit.vitewallet" = "Deposit from Vite Wallet";
+"crosschain.deposit.otherwallet" = "Deposit from Another Wallet";
+"crosschain.deposit.history" = "Deposit History";
+"crosschain.withdraw.history" = "Withdrawal History";
 "crosschain.deposit.minAmountDesc" = "Only %@ is accepted by the address below, and the minimum amount should be no less than %@";
 "crosschain.deposit.minComfirm" = "The process should take %@ confirmation(s), please wait.";
-"crosschain.deposit.address" = "Receive Address";
+"crosschain.deposit.address" = "Deposit Address";
 "crosschain.deposit.scanAddress" = "Please scan the address QR code";
 "crosschain.deposit.scanLabel" = "Please scan the %@ code";
-"crosschain.deposit.labelDesc" = "Please do use %@ together with the Receive Address, or you will lose the token(s).";
+"crosschain.deposit.labelDesc" = "Please do use %@ together with the Deposit Address, or you will lose the token(s).";
 
-"crosschain.deposit.about" = "<h1 style=\"font-PingFangSC-Medium;font-size:12;color:#24272B\">About Cross-Chain Receive</h1><p style=\"font-PingFangSC-Regular;font-size:11;color:#3E4A59\">Making a cross-chain receive allows %@ to be mapped into the Vite network. After that, you will also be able to make a cross-chain transfer. %@ balance in your Vite wallet will be reduced accordingly when you make a cross-chain receive from your Vite wallet.</p>";
-"crosschain.deposit.other.about" = "<h1 style=\"font-PingFangSC-Medium;font-size:12;color:#24272B\">About Cross-Chain Receive</h1><p style=\"font-PingFangSC-Regular;font-size:11;color:#3E4A59\">Making a cross-chain receive allows %@ to be mapped into the Vite network. After that, you will also be able to make a cross-chain transfer.</p>";
+"crosschain.deposit.about" = "<h1 style=\"font-PingFangSC-Medium;font-size:12;color:#24272B\">About Cross-Chain Deposit</h1><p style=\"font-PingFangSC-Regular;font-size:11;color:#3E4A59\">Making a cross-chain deposit allows %@ to be mapped into the Vite network. After that, you will also be able to make a cross-chain withdrawal. %@ balance in your Vite wallet will be reduced accordingly when you make a cross-chain deposit from your Vite wallet.</p>";
+"crosschain.deposit.other.about" = "<h1 style=\"font-PingFangSC-Medium;font-size:12;color:#24272B\">About Cross-Chain Deposit</h1><p style=\"font-PingFangSC-Regular;font-size:11;color:#3E4A59\">Making a cross-chain deposit allows %@ to be mapped into the Vite network. After that, you will also be able to make a cross-chain withdrawal.</p>";
 "crosschain.withdraw.eth.myAddress" = "My ETH Address";
-"crosschain.deposit.min" = "Minimum Receive Amount ";
-"crosschain.withdraw.min" = "Minimum Send Amount ";
-"crosschain.deposit.min.alert" = "The receive amount cannot be less than ";
-"crosschain.deposit.all" = "Receive All";
-"crosschain.deposit.amount" = "Receive Amount";
+"crosschain.deposit.min" = "Minimum Deposit Amount ";
+"crosschain.withdraw.min" = "Minimum Withdrawal Amount ";
+"crosschain.deposit.min.alert" = "The deposit amount cannot be less than ";
+"crosschain.deposit.all" = "Deposit All";
+"crosschain.deposit.amount" = "Deposit Amount";
 "crosschain.withdraw.all" = "Withdraw All";
-"crosschain.withdraw.amount" = "Withdraw Amount";
+"crosschain.withdraw.amount" = "Withdrawal Amount";
 "crosschain.tokenDetail.shortname" = "Symbol";
 "crosschain.tokenDetail.id" = "Token ID";
 "crosschain.tokenDetail.name" = "Token Name";
@@ -690,15 +690,15 @@
 "crosschain.status.confirmed" = "Confirmed";
 "crosschain.status.tot.exceed.limit" = "Exceed the limit";
 "crosschain.status.wrong.address" = "Wrong transfer address";
-"crosschain.status.gatewayReceived" = "Received by Gateway";
-"crosschain.status.withdraw.failed" = "Withdraw Failed";
-"crosschain.status.failedBecausePoor" = "Too less amount";
+"crosschain.status.gatewayReceived" = "Deposit by Gateway";
+"crosschain.status.withdraw.failed" = "Withdrawal Failed";
+"crosschain.status.failedBecausePoor" = "Insufficient amount";
 "crosschain.withdraw.fee.desc" = "This fee is charged by the gateway.";
 "crosschain.withdraw.aboutfee" = "About Fee";
 "crosschain.status.failed" = "Deposit Failed";
-"crosschain.beta.alert" = "Current is a beta version, Please don't transfer in large amount.";
+"crosschain.beta.alert" = "Current is a beta version, Please don't deposit large amount in your account.";
 "crosschain.fee" = "Fee";
-"crosschain.withdraw.gatewayispoor" = "Amount exceeds the %@-%@ limit, please contact gateway@vite.org to transfer out.";
+"crosschain.withdraw.gatewayispoor" = "Amount exceeds the %@-%@ limit, please contact gateway@vite.org to send out.";
 "crosschain.gatewaydetail.title" = "Gateway Details";
 "crosschain.gatewaydetail.name" =  "Gateway Name";
 "crosschain.gatewaydetail.webset" =  "Official Website";
@@ -894,21 +894,21 @@
 "fund.walletAddress" = "My Address";
 "fund.walletFound" = "Wallet Balance";
 "fund.quotaInfo" = "Spendable Quota/Quota Limit";
-"fund.deposit.amount" = "Deposit Amount";
+"fund.deposit.amount" = "Transfer Amount";
 "fund.deposit.all" = "All";
 "fund.quotaSpend" = "Quota";
-"fund.deposit" = "Deposit";
+"fund.deposit" = "Transfer";
 "fund.vitexFound" = "Available Balance";
-"fund.withdraw.amount" = "Withdrawal Amount";
-"fund.withdraw" = "Withdraw";
+"fund.withdraw.amount" = "Transfer Amount";
+"fund.withdraw" = "Transfer";
 "fund.vitex.all" = "Exchange Total Balance";
 "fund.vitex.available" = "Exchange Available Balance";
 "fund.tooBig" = "The amount you entered exceeds available balance, please enter again";
-"fund.withdraw.placeholder" = "Please enter withdrawal amount";
-"fund.deposit.placeholder" = "Please enter deposit amount";
-"fund.cannotDeposit" = "Unable to deposit due to insufficient wallet balance";
-"fund.cannotWithDraw" = "Unable to withdraw due to insufficient exchange balance";
-"fund.DepositSuccess" = "Deposit successful. Check exchange balance?";
+"fund.withdraw.placeholder" = "Please enter transfer amount";
+"fund.deposit.placeholder" = "Please enter transfer amount";
+"fund.cannotDeposit" = "Unable to transfer due to insufficient wallet balance";
+"fund.cannotWithDraw" = "Unable to transfer due to insufficient exchange balance";
+"fund.DepositSuccess" = "Transfer successful. Check exchange balance?";
 
 "transfer.from" =  "From";
 "transfer.wallet.account" =  "Wallet Account";
