--- a/ViteBusiness/Assets/zh-Hans.lproj/Localizable.strings
+++ b/ViteBusiness/Assets/zh-Hans.lproj/Localizable.strings
@@ -658,28 +658,28 @@
 "crosschain.tokendetail" = "代币详情";
 "crosschain.deposit" = "跨链充值";
 "crosschain.withdraw" = "跨链提现";
-"crosschain.withdraw.btnTitle" = "转出";
-"crosschain.deposit.btnTitle" = "转入";
+"crosschain.withdraw.btnTitle" = "充值";
+"crosschain.deposit.btnTitle" = "提现";
 "crosschain.deposit.vitewallet" = "Vite钱包转入";
 "crosschain.deposit.otherwallet" = "其他钱包转入";
-"crosschain.deposit.history" = "转入记录";
-"crosschain.withdraw.history" = "转出记录";
-"crosschain.deposit.minAmountDesc" = "通过下方转入地址只能转入%@，且金额不得低于%@";
+"crosschain.deposit.history" = "充值记录";
+"crosschain.withdraw.history" = "提现记录";
+"crosschain.deposit.minAmountDesc" = "通过下方充值地址只能充值%@，且金额不得低于%@";
 "crosschain.deposit.minComfirm" = "%@个网络确认之后到账，请耐心等待";
-"crosschain.deposit.address" = "转入地址";
+"crosschain.deposit.address" = "充值地址";
 "crosschain.deposit.scanAddress" = "请扫描地址二维码";
 "crosschain.deposit.scanLabel" = "请扫描%@二维码";
 "crosschain.deposit.labelDesc" = "请将%@与充值地址同时使用，否则币会丢失";
-"crosschain.deposit.about" = "<h1 style=\"font-PingFangSC-Medium;font-size:12;color:#24272B\">关于跨链充值</h1><p style=\"font-PingFangSC-Regular;font-size:11;color:#3E4A59\">跨链充值操作是将%@跨链映射至Vite网络，转入后您可以通过跨链提现。Vite钱包跨链充值是使用Vite钱包%@余额进行转入。</p>";
+"crosschain.deposit.about" = "<h1 style=\"font-PingFangSC-Medium;font-size:12;color:#24272B\">关于跨链充值</h1><p style=\"font-PingFangSC-Regular;font-size:11;color:#3E4A59\">跨链充值操作是将%@跨链映射至Vite网络，转入后您可以通过跨链提现。Vite钱包跨链充值是使用Vite钱包%@余额进行充值。</p>";
 "crosschain.deposit.other.about" = "<h1 style=\"font-PingFangSC-Medium;font-size:12;color:#24272B\">关于跨链充值</h1><p style=\"font-PingFangSC-Regular;font-size:11;color:#3E4A59\">跨链充值操作是将%@跨链映射至Vite网络，转入后您可以通过跨链提现。</p>";
 "crosschain.withdraw.eth.myAddress" = "我的ETH地址";
-"crosschain.deposit.min" = "最少转入";
-"crosschain.withdraw.min" = "最少转出";
-"crosschain.deposit.min.alert" = "转入金额不得少于";
-"crosschain.deposit.all" = "全部转入";
-"crosschain.deposit.amount" = "转入金额";
-"crosschain.withdraw.all" = "全部转出";
-"crosschain.withdraw.amount" = "转出金额";
+"crosschain.deposit.min" = "最少充值";
+"crosschain.withdraw.min" = "最少提现";
+"crosschain.deposit.min.alert" = "充值金额不得少于";
+"crosschain.deposit.all" = "全部充值";
+"crosschain.deposit.amount" = "充值金额";
+"crosschain.withdraw.all" = "全部提现";
+"crosschain.withdraw.amount" = "提现金额";
 "crosschain.tokenDetail.shortname" = "代币简称";
 "crosschain.tokenDetail.id" = "代币ID";
 "crosschain.tokenDetail.name" = "代币名称";
@@ -695,16 +695,16 @@
 "crosschain.status.waitToConfirm" = "%@链待确认";
 "crosschain.status.confirmed" = "已完成";
 "crosschain.status.tot.exceed.limit" = "超过限额";
-"crosschain.status.wrong.address" = "转出地址错误";
+"crosschain.status.wrong.address" = "提现地址错误";
 "crosschain.status.gatewayReceived" = "网关已接收";
 "crosschain.status.withdraw.failed" = "转出失败";
-"crosschain.status.failedBecausePoor" = "转入金额过小";
+"crosschain.status.failedBecausePoor" = "充值金额过小";
 "crosschain.withdraw.fee.desc" = "此手续费为网关收取。";
 "crosschain.withdraw.aboutfee" = "关于手续费";
-"crosschain.status.failed" = "转入失败";
-"crosschain.beta.alert" = "当前网关为beta版，请不要转入大额资产";
+"crosschain.status.failed" = "充值失败";
+"crosschain.beta.alert" = "当前网关为beta版，请不要充值大额资产";
 "crosschain.fee" = "手续费";
-"crosschain.withdraw.gatewayispoor" = "转出金额超出最高限额%@%@，请联系gateway@vite.org转出.";
+"crosschain.withdraw.gatewayispoor" = "提现金额超出最高限额%@%@，仍需提现请联系gateway@vite.org.";
 "crosschain.gatewaydetail.title" = "网关详情";
 "crosschain.gatewaydetail.name" =  "网关名称";
 "crosschain.gatewaydetail.webset" =  "官网";
@@ -903,21 +903,21 @@
 "fund.walletAddress" = "我的账户地址";
 "fund.walletFound" = "钱包余额";
 "fund.quotaInfo" = "配额余额/上限";
-"fund.deposit.amount" =  "充值金额";
+"fund.deposit.amount" =  "划转金额";
 "fund.deposit.all" =  "全部";
 "fund.quotaSpend" =  "配额";
-"fund.deposit" =  "充值";
-"fund.vitexFound" = "可提现余额";
-"fund.withdraw.amount" =  "提现金额";
-"fund.withdraw" =  "提现";
+"fund.deposit" =  "划转";
+"fund.vitexFound" = "可划转余额";
+"fund.withdraw.amount" =  "划转金额";
+"fund.withdraw" =  "划转";
 "fund.vitex.all" =  "全部余额";
 "fund.vitex.available" =  "可用余额";
 "fund.tooBig" =  "您输入的金额大于余额，请重新输入";
-"fund.withdraw.placeholder" =  "请输入提现金额";
-"fund.deposit.placeholder" =  "请输入充值金额";
-"fund.cannotDeposit" =  "钱包余额为0，无法充值";
-"fund.cannotWithDraw" =  "交易所余额为0，无法提现";
-"fund.DepositSuccess" =  "充值至交易所成功，是否去交易所查看？";
+"fund.withdraw.placeholder" =  "请输入划转金额";
+"fund.deposit.placeholder" =  "请输入划转金额";
+"fund.cannotDeposit" =  "钱包余额为0，无法划转";
+"fund.cannotWithDraw" =  "交易所余额为0，无法划转";
+"fund.DepositSuccess" =  "划转成功，是否去交易所查看？";
 
 "transfer.from" =  "从";
 "transfer.wallet.account" =  "钱包账户";
