--- a/ViteBusiness/Assets/en.lproj/Localizable.strings
+++ b/ViteBusiness/Assets/en.lproj/Localizable.strings
@@ -926,5 +926,5 @@
 "market.price" =  "Last Price";
 "market.percent" =  "Change";
 "market.operator" =  "Operators";
-"market.switch" =  "Switch";
+"market.switch" =  "Exchange";
 
